Disable Docker for Render - use native Java build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,33 +1,3 @@
-# Use OpenJDK 17 as base image
-FROM openjdk:17-jdk-slim
-
-# Set working directory
-WORKDIR /app
-
-# Install Maven
-RUN apt-get update && \
-    apt-get install -y maven && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
-
-# Copy Maven files
-COPY pom.xml .
-
-# Download dependencies (using system Maven instead of wrapper)
-RUN mvn dependency:go-offline -B
-
-# Copy source code
-COPY src ./src
-
-# Build the application
-RUN mvn clean package -DskipTests
-
-# Expose port
-EXPOSE 8080
-
-# Set environment variables
-ENV SPRING_PROFILES_ACTIVE=prod
-ENV PORT=8080
-
-# Run the application
-CMD ["java", "-Dserver.port=${PORT}", "-jar", "target/pet-paradise-backend-0.0.1-SNAPSHOT.jar"]
+# This Dockerfile has been temporarily disabled for Render deployment
+# Use Dockerfile.disabled if you need Docker deployment
+# Render will now use native Java build instead
