--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,32 @@
-# This Dockerfile has been temporarily disabled for Render deployment
-# Use Dockerfile.disabled if you need Docker deployment
-# Render will now use native Java build instead
+# Use OpenJDK 17 as base image
+FROM openjdk:17-jdk-slim
+
+# Set working directory
+WORKDIR /app
+
+# Install Maven
+RUN apt-get update && \
+    apt-get install -y maven && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Copy Maven files first for better caching
+COPY pom.xml .
+
+# Download dependencies
+RUN mvn dependency:go-offline -B
+
+# Copy source code
+COPY src ./src
+
+# Build the application
+RUN mvn clean package -DskipTests
+
+# Expose port
+EXPOSE 8080
+
+# Set environment variables
+ENV SPRING_PROFILES_ACTIVE=prod
+
+# Run the application with dynamic port support
+CMD ["sh", "-c", "java -Dserver.port=${PORT:-8080} -Dspring.profiles.active=prod -jar target/pet-paradise-backend-0.0.1-SNAPSHOT.jar"]
