--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 # Production Configuration
-spring.profiles.active=prod
+# NOTE: spring.profiles.active should NOT be set in profile-specific files
 
-# Database Configuration (Railway PostgreSQL)
+# Database Configuration (PostgreSQL)
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
