Add DatabaseConfig to handle Render PostgreSQL URL format

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -2,10 +2,9 @@
 # NOTE: spring.profiles.active should NOT be set in profile-specific files
 
 # Database Configuration (PostgreSQL)
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database URL is handled by DatabaseConfig.java for proper URL format conversion
+# spring.datasource.url is configured programmatically
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 
 # Server Configuration
