--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 VITE_API_URL=http://localhost:9090/api
 
 # Production (set in Vercel environment variables)
-# VITE_API_URL=https://your-railway-app.railway.app/api
+VITE_API_URL=https://petparadise-react-spring-2.onrender.com/api
