--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -10,8 +10,8 @@ spring.jpa.show-sql=false
 # Server Configuration
 server.port=${PORT:8080}
 
-# CORS Configuration (Update with your Vercel domain)
-spring.web.cors.allowed-origins=${CORS_ORIGINS:https://your-app.vercel.app,http://localhost:5173,http://localhost:5174}
+# CORS Configuration (Updated with your Vercel domain)
+spring.web.cors.allowed-origins=${CORS_ORIGINS:https://pet-paradise-react-spring.vercel.app,http://localhost:5173,http://localhost:5174}
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS,PATCH
 spring.web.cors.allowed-headers=Authorization,Content-Type,Accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,X-Requested-With
 spring.web.cors.allow-credentials=true
